--- a/api/ApplicationCache.json
+++ b/api/ApplicationCache.json
@@ -24,6 +24,10 @@
           "ie": {
             "version_added": "10"
           },
+          "oculus": {
+            "version_added": "5.0",
+            "version_removed": "12.0"
+          },
           "opera": {
             "version_added": "≤12.1",
             "version_removed": "71"
@@ -74,6 +78,10 @@
             },
             "ie": {
               "version_added": "10"
+            },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
             },
             "opera": {
               "version_added": "15",
@@ -127,6 +135,10 @@
             "ie": {
               "version_added": "10"
             },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
+            },
             "opera": {
               "version_added": "15",
               "version_removed": "71"
@@ -178,6 +190,10 @@
             },
             "ie": {
               "version_added": "10"
+            },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
             },
             "opera": {
               "version_added": "15",
@@ -231,6 +247,10 @@
             "ie": {
               "version_added": "10"
             },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
+            },
             "opera": {
               "version_added": "15",
               "version_removed": "71"
@@ -282,6 +302,10 @@
             },
             "ie": {
               "version_added": "10"
+            },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
             },
             "opera": {
               "version_added": "15",
@@ -335,6 +359,10 @@
             "ie": {
               "version_added": "10"
             },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
+            },
             "opera": {
               "version_added": "15",
               "version_removed": "71"
@@ -386,6 +414,10 @@
             },
             "ie": {
               "version_added": "10"
+            },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
             },
             "opera": {
               "version_added": "15",
@@ -439,6 +471,10 @@
             "ie": {
               "version_added": "10"
             },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
+            },
             "opera": {
               "version_added": "15",
               "version_removed": "71"
@@ -490,6 +526,10 @@
             },
             "ie": {
               "version_added": "10"
+            },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
             },
             "opera": {
               "version_added": "15",
@@ -543,6 +583,10 @@
             "ie": {
               "version_added": "10"
             },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
+            },
             "opera": {
               "version_added": "≤12.1",
               "version_removed": "71"
@@ -595,6 +639,10 @@
             "ie": {
               "version_added": "10"
             },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
+            },
             "opera": {
               "version_added": "≤12.1",
               "version_removed": "71"
@@ -646,6 +694,10 @@
             },
             "ie": {
               "version_added": "10"
+            },
+            "oculus": {
+              "version_added": "5.0",
+              "version_removed": "12.0"
             },
             "opera": {
               "version_added": "≤12.1",
